--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #060b26;
+    background-color: #F26522;
     height: 80px;
     display: flex;
     justify-content: start;
@@ -14,7 +14,7 @@
   }
   
   .nav-menu {
-    background-color: #060b26;
+    background-color: #F26522;
     width: 250px;
     height: 100vh;
     display: flex;
@@ -60,7 +60,7 @@
   }
   
   .navbar-toggle {
-    background-color: #060b26;
+    background-color: #F26522;
     width: 100%;
     height: 80px;
     display: flex;
