--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   font-family: 'Lato', sans-serif;
 }
 
-.home, .reports, .products
+.home, .reports
 {
   display:flex;
   height:90vh;
@@ -15,3 +15,4 @@
   justify-content:center;
   font-size: 3rem;
 }
+
