--- a/src/Pages/Products.css
+++ b/src/Pages/Products.css
@@ -1,9 +1,18 @@
 .wrapper
 {
-    display:flex;
+    display:flex;   
+    width: 100%;
 }
 
-.left-content
+.left
 {
+    margin-right:2rem;
     margin-left:2rem;
+    width:50%;
+}
+
+.right
+{
+    margin-right:2rem;
+    width: 50%;
 }
